--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Darius Zdroba</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
